--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,4 +10,4 @@ pipelines:
     - step:
         script: # Modify the commands below to build your repository.
           - pip install -r requirements.txt
-          - python -m unittest discover tests/main-test.py
+          - python -m unittest tests/main_test.py
