--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,4 +10,6 @@ pipelines:
     - step:
         script: # Modify the commands below to build your repository.
           - pip install -r requirements.txt
+    - step:
+        script:
           - python -m unittest tests/main_test.py
