--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -12,7 +12,8 @@ pipelines:
           - pip
         script: # Modify the commands below to build your repository.
           - pip install -r requirements.txt
-          - pip install jsonpickle
+          - python3
+          - import jsonpickle
     - step:
         script:
           - python -m unittest tests/main_test.py
