--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,3 +15,4 @@ pipelines:
     - step:
         script:
           - python -m unittest tests/main_test.py
+          - python test-bitbucket-pipelines.py
