bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,5 +14,7 @@ pipelines:
           - pip install -r requirements.txt
     - step:
         script:
-          - python -m unittest tests/main_test.py
+        - python -m unittest tests/main_test.py
+    - step:
+        script:
           - python test-bitbucket-pipelines.py
