bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,6 +14,7 @@ pipelines:
           - pip install -r requirements.txt
     - step:
         script:
+          - pip install -r requirements.txt
           - python test-bitbucket-pipelines.py
     - step:
             script:
