--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,6 +8,7 @@ image: python:3.6
 pipelines:
   default:
     - step:
+        max-time: 10
         caches:
           - pip
         script: # Modify the commands below to build your repository.
